# vigiLens

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  blog.html  docker-compose.external.yml  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt
assets/: system_architecture.excalidraw
docker/: Dockerfile  requirements.runtime.txt
tests/: conftest.py
tests/contract/: test_message_contracts.py
tests/integration/: conftest.py  test_api_query.py  test_api_submit_stream.py  test_llm_analysis.py  test_llm_worker.py  test_redis_queue.py  test_s3_client.py  test_screener.py  test_stream_worker.py  test_webhook_delivery.py
tests/unit/: test_config.py  test_event_idempotency.py  test_ffmpeg_command.py  test_llm_utils.py  test_messages.py  test_parse_llm_result.py  test_prompts.py  test_query_router.py  test_redis_queue_parsing.py
vigilens/apps/api/: app.py  query.py  stream.py
vigilens/apps/demo/: app.py
vigilens/apps/demo/static/: app.js  index.html  styles.css
vigilens/apps/workers/llm/: __init__.py  webhook.py  worker.py
vigilens/apps/workers/scene/: worker.py
vigilens/apps/workers/stream/: __init__.py  (+2 more)
vigilens/core/: config.py  db.py
vigilens/integrations/: llm_client.py  redis_queue.py  storage.py
vigilens/models/contracts/: messages.py  prompts.py
vigilens/observability/: __init__.py  config.py  decorators.py
vigilens/processor/: qwen3_vl_embedding.py  qwen3_vl_reranker.py
vigilens/reranker/: README.md  config.yaml  service.py
vigilens/services/: clip_builder.py  events.py  query_router.py  screening.py
